--- a/relation/capitoli/capitolo-2.tex
+++ b/relation/capitoli/capitolo-2.tex
@@ -4,11 +4,19 @@
 % !TEX spellcheck = it-IT
 
 %**************************************************************
-\chapter{Processi e metodologie}
-\label{cap:processi-metodologie}
+\chapter{Project Development}
+\label{cap:project-development}
 %**************************************************************
 
 \intro{Brevissima introduzione al capitolo}\\
 
 %**************************************************************
-\section{Processo sviluppo prodotto}
+\section{Insertion length}
+
+\section{Physical Coverage}
+
+\section{Sequence Coverage}
+
+\section{Kmers counting}
+
+\section{Cigar H and S reads}
