--- a/relation/bioinformatics.tex
+++ b/relation/bioinformatics.tex
@@ -76,6 +76,8 @@
 \usepackage{longtable}                  % tabelle su più pagine                                        
 \usepackage{ltxtable}                   % tabelle su più pagine e adattabili in larghezza
 \usepackage{verbatim}
+\usepackage{listings}
+\usepackage{minted}
 
 \usepackage[toc, acronym]{glossaries}   % glossario
                                         % per includerlo nel documento bisogna:
@@ -109,7 +111,7 @@
 %**************************************************************
 \mainmatter
 
-\changefontsizes[16pt]{14pt}
+\changefontsizes[14pt]{12pt}
 \input{capitoli/capitolo-1}             % Introduzione
 \input{capitoli/capitolo-2}             % Processi
 \input{capitoli/capitolo-3}             % Kick-Off
