--- a/relation/capitoli/capitolo-4.tex
+++ b/relation/capitoli/capitolo-4.tex
@@ -4,10 +4,24 @@
 % !TEX spellcheck = it-IT
 
 %**************************************************************
-\chapter{Considerations}
+\chapter{Results and Considerations}
 \label{cap:considerations}
 %**************************************************************
 
-\intro{Breve introduzione al capitolo}\\
+\intro{This chapter talk about final results and consideration about the project}\\
+\section{Results}
+
+The obtained results are some structural variation found in the resequenced genome.
+These structural variation are:
+\begin{itemize}
+\item \begin{description}
+		\item[Long deletion] a long deletion is visible between 1.380k bases and 1.400k bases, this deletetation is confirmed by sequence coverage
+  \end{description}
+\end{itemize}
+\begin{itemize}
+\item \begin{description}
+		\item[Inversion] the inversion structural modification is visible between 1.745k bases and 1.770k bases
+  \end{description}
+\end{itemize}
 
 \section{Considerations}
