--- a/relation/capitoli/capitolo-4.tex
+++ b/relation/capitoli/capitolo-4.tex
@@ -11,6 +11,19 @@
 \intro{This chapter talk about final results and consideration about the project}\\
 \section{Results}
 
+The result of mean and standard deviation of genome insertion length are:
+\begin{itemize}
+\item \begin{description}
+		\item[MEAN:] 2102
+  \end{description}
+\end{itemize}
+
+\begin{itemize}
+\item \begin{description}
+		\item[STD:] 236.85
+  \end{description}
+\end{itemize}
+
 The obtained results are some structural variation found in the resequenced genome.
 These structural variation are:
 \begin{itemize}
@@ -24,4 +37,59 @@ These structural variation are:
   \end{description}
 \end{itemize}
 
+As I wrote in the section \ref{sec:cigar}, the cigar's trak allows ad helps to find these structural variations.\\\\
+
+About the kmers, the results are really varius and with larger \emph{k} size the number of kmer quantity decrease but the number of kmers become really huge.
+We can se that for the \emph{k = 4}, the most frquent kmers are: 
+\begin{itemize}
+\item TTTT
+\item AAAC
+\item GTTT
+\end{itemize}
+
+For the the \emph{k = 7}, the most frquent kmers is: 
+
+\begin{itemize}
+\item TTGAAAA
+\end{itemize}
+
+At last, for the the \emph{k = 9}, the most frquent kmers is:
+\begin{itemize}
+\item AAAACTTTT
+\end{itemize}
+ 
 \section{Considerations}
+
+Some difficults are rescounteredd about this project:
+\begin{itemize}
+\item \begin{description}
+		\item[Information] the information retrivial is really diffucult, there availabble sources is often poor and always confused, the the same thing is really simple to find different definitions and different information. The most use blog and websites are \href{https://www.biostars.org/}{Biostars} and \href{http://seqanswers.com/forums/}{SEQ answer Forum}, but often the information are not right, also \href{https://it.wikipedia.org}{WeikiPedia} is used but often is not really clear about hese arguments.\\ I suoppose which these problems are caused by recently age of Bioinformatics.
+  \end{description}
+\end{itemize}
+
+
+\begin{itemize}
+\item \begin{description}
+		\item[The approach] The approach to the project is not simple, there are many languages that could be used, but each one hide a problem.\\
+		Is necessary to evaluate each one of these programming languages by these:
+		\begin{itemize}
+			\item semplicity
+			\item speed
+			\item strin manipulation
+			\item used RAM
+			\item used CPU
+		\end{itemize}
+  \end{description}
+\end{itemize}
+
+
+\begin{itemize}
+\item \begin{description}
+		\item[Hardware] The hardware of the computer must be really strong, otherwise excute some point is not simple
+  \end{description}
+\end{itemize}
+
+\section{Conclusions}
+The project has allows me to search and test this new field of computer science.
+The Bioinformatics will be the future of the computer science because is very sueful to find and identify some deseases, genomic variations, and this implicit explain how this helps us to prevent the healt problem for the humans as well animals and plants.\\\\
+The Bioinformatics could be helpfull in each area of the Biology.
