--- a/relation/capitoli/capitolo-3.tex
+++ b/relation/capitoli/capitolo-3.tex
@@ -13,13 +13,13 @@
 %**************************************************************
 \section{Phyton source code}
 
-In this section is reported all the pyhton source codes use in the project
+In these sections are reported all the pyhton sources used in the project
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \subsection{Insertion length}
 \tiny
 \begin{minted}{python}
 
-class FirstAlgorithm(BaseAlgorithm):
+class InsertionLengthAlgorithm(BaseAlgorithm):
 
     def __init__(self, name, path):
         BaseAlgorithm.__init__(self, name, path)
@@ -30,17 +30,14 @@ class FirstAlgorithm(BaseAlgorithm):
         sum = 0;
         sumI = 0;
 
-        ext = 0;
         with open(self.path) as file:
             for line in file:
-
-                if ext == self.length:break;
 
                 if line.find("@") != -1:
                     continue
 
                 pieces = line.split("\t")
-                ext += 1
+
                 if int(pieces[8]) > 0 and int(pieces[8]) < 10000:
                     isize = abs(int(pieces[3])-int(pieces[7]))
                     genome_insertion.append(isize)
@@ -49,7 +46,6 @@ class FirstAlgorithm(BaseAlgorithm):
 
 
         file = "position,isize\n"
-        scatFile = "position,distance\n"
 
         isizeM = int((sum / sumI))
         tmp = 0
@@ -57,8 +53,8 @@ class FirstAlgorithm(BaseAlgorithm):
         for i in genome_insertion:
             file += str(index)+","+str(i)+"\n"
             dist = (i-isizeM)
-            scatFile += str(dist)+","+str(i)+"\n"
-            tmp += math.pow(dist,2) #per la dev standard
+            # needs for the standard deviation
+            tmp += math.pow(dist,2)
             index += 1
 
 
@@ -67,18 +63,14 @@ class FirstAlgorithm(BaseAlgorithm):
         targetF.truncate()
         targetF.write(file)
         targetF.close()
-        print "Saving genome_insert_scat_csv.csv file..."
-        targetF = open("genome_insert_scat_csv.csv","w")
-        targetF.truncate()
-        targetF.write(scatFile)
-        targetF.close()
         print "Media: "+str(isizeM)
-        print "Standard Dev: "+str(math.sqrt(tmp/(index)))
+        print "Standard Dev: "+str(format(math.sqrt(tmp/(index)),'.2f'))
         print("Done!")
 
 \end{minted}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
+\newpage
 \subsection{Physical Coverage}
 \tiny
 \begin{minted}{python}
@@ -129,12 +121,12 @@ class PhysicalCoverageAlgorithm(BaseAlgorithm):
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \subsection{Sequence Coverage}
 \tiny
 \begin{minted}{python}
 
 class SequenceCoverageAlgorithm(BaseAlgorithm):
-
 
 
     def __init__(self, name, path):
@@ -190,14 +182,78 @@ class SequenceCoverageAlgorithm(BaseAlgorithm):
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\subsection{Cigar H and S}
+\tiny
+\begin{minted}{python}
+class CigarAlgorithm(BaseAlgorithm):
+
+
+
+    def __init__(self, name, path):
+        BaseAlgorithm.__init__(self, name, path)
+
+    def run(self):
+
+        self.lengthOfCoverage()
+        genome_change = {}
+
+        #open the SAM file
+        print "Analising SAM file..."
+        with open(self.path) as file:
+            for line in file:
+
+                #exclude header lines
+                if line.find("@") != -1:
+                    continue;
+
+                pieces = line.split("\t")
+
+                #exclude all reads that no have H or S inside CIGAR field
+                if pieces[5].find("H") == -1 and pieces[5].find("S") == -1:
+
+                    continue
+                else:
+                    index = int(pieces[3])
+                    length = (int(pieces[3]) + int(pieces[8]))
+                    while(index < length ):
+
+                        if genome_change.has_key(index):
+                            genome_change[index] = genome_change[index] + 1
+                        else:
+                            genome_change.__setitem__(index,1)
+
+                        index += 1
+
+        file += "fixedStep chrom=genome start=1 step=1 span=1\n"
+
+        coverage = 0
+
+        for i in genome_change:
+            coverage = genome_change[i];
+            file += str(coverage)+"\n"
+
+        print "Saving cigar.wig file..."
+        targetF = open("cigar.wig","w")
+        targetF.truncate()
+        targetF.write(file)
+        targetF.close()
+        print("Done!")
+\end{minted}        
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \subsection{Kmers Counting}
 \tiny
 \begin{minted}{python}
 
 class KmersAlgorithm(BaseAlgorithm):
-	
-	def __init__(self, name, path):
-    		BaseAlgorithm.__init__(self, name, path)
+
+    kmersL = 4
+    kmerLabel = ""
+    kmerMax = 0
+
+    def __init__(self, name, path):
+        BaseAlgorithm.__init__(self, name, path)
 
     def mapping(self, string):
 
@@ -210,22 +266,37 @@ class KmersAlgorithm(BaseAlgorithm):
         string = string.replace("W", "G")
         return string
 
+    def kmersLength(self):
+        print "Please insert the desidered length of the kmers ( leave empty to set default value 4 ) :"
+        inputVal = raw_input(">>  ")
+        try:
+            if inputVal == "":
+                self.kmersL = 4
+            else:
+                print inputVal
+                self.kmersL = int(inputVal)
+        except ValueError:
+            print("Error, you must pass a number")
+
+    def checker(self, max,label):
+        if(max > self.kmerMax):
+            self.kmerMax = max
+            self.kmerLabel = label
+
     def run(self):
 
         self.lengthOfCoverage()
 
+        self.kmersLength()
         #open the SAM file
-        print "Open SAM file..."
+
+        print "Open SAM file...\n"
         kmers = {}
-        index = 0
-        print "Looking for kmers and it's opposites for "+str(self.length)
+
+        print "Looking for kmers and it's opposites for "+str(self.kmersL)+" bases long\n"
         with open(self.path) as file:
             for line in file:
 
-                if index == self.length:
-                    break;
-
-                index += 1
                 #exclude header lines
                 if line.find("@") != -1:
                     continue;
@@ -234,18 +305,22 @@ class KmersAlgorithm(BaseAlgorithm):
 
                 read = str(pieces[9])
                 padding = 0
-                while len(read[padding:padding+4]) >= 4:
-                    key = read[padding:padding+4]
+                while len(read[padding:padding+self.kmersL]) >= self.kmersL:
+                    key = read[padding:padding+self.kmersL]
                     padding += 1
+                    # looking for the kmers
                     if kmers.has_key(key):
                         kmers[key] = kmers[key] +1
-
+                        self.checker(kmers[key],key)
+                    # looking for the opposite kmers
                     elif kmers.has_key(self.mapping(key)):
                             kmers[self.mapping(key)] = kmers[self.mapping(key)] +1
+                            self.checker(kmers[self.mapping(key)],self.mapping(key))
+                    # adding new kmers
                     else:
                         kmers.__setitem__(key,1)
+                        self.checker(kmers[key],key)
 
-        file = "";
         file = "kmer,quantity\n"
         for i in kmers:
             file += str(i)+","+str(kmers[i])+"\n"
@@ -255,9 +330,13 @@ class KmersAlgorithm(BaseAlgorithm):
         targetF.truncate()
         targetF.write(file)
         targetF.close()
+        print "The max present value is: "+str(self.kmerMax)+" for the kmer: "+self.kmerLabel+"\n"
         print("Done!")
 \end{minted}
 
+
+
+\newpage
 \section{R source code}
 In this section is reported all the R source codes use in the project
 
