--- a/relation/capitoli/capitolo-3.tex
+++ b/relation/capitoli/capitolo-3.tex
@@ -84,10 +84,9 @@ class PhysicalCoverageAlgorithm(BaseAlgorithm):
     def run(self):
 
         self.lengthOfCoverage()
-        genome_change = [0] * self.length
 
-        for i in range:
-            genome_change.append(0)
+        genome_change = [0] * self.length
+        range = xrange(0, self.length)
 
         with open(self.path) as file:
             for line in file:
@@ -104,7 +103,6 @@ class PhysicalCoverageAlgorithm(BaseAlgorithm):
         file = "";
         file += "fixedStep chrom=genome start=1 step=1 span=1\n"
         currentC = 0
-
 
 
         for i in range:
