--- a/relation/bioinformatics-config.tex
+++ b/relation/bioinformatics-config.tex
@@ -6,11 +6,11 @@
 % Frontespizio
 %**************************************************************
 \newcommand{\myName}{Stefano Campese}                                    % autore
-\newcommand{\myTitle}{Lacotbacillus resequencing}                    
+\newcommand{\myTitle}{Lactobacillus Casei resequencing}                    
 \newcommand{\myDegree}{Bioinformatics project}                % tipo di tesi
-\newcommand{\myUni}{Università degli Studi di Padova}           % università
-\newcommand{\myFaculty}{Corso di Laurea Magistrale in Informatica}         % facoltà
-\newcommand{\myDepartment}{Dipartimento di Matematica}          % dipartimento
+\newcommand{\myUni}{University of Padova}           % università
+\newcommand{\myFaculty}{Master degree in Computer Science}         % facoltà
+\newcommand{\myDepartment}{Math departement}          % dipartimento
 \newcommand{\myProf}{Giorgio Valle}                                % relatore
 \newcommand{\myLocation}{Padova}                                % dove
 \newcommand{\myAA}{2015-2016}                                   % anno accademico
